--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Vinyls_Jetpack_Application</string>
     <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
@@ -14,10 +13,10 @@
     <string name="collector_phone_placeholder">Número telefónico</string>
     <string name="comment_rating_placeholder">##</string>
     <string name="comment_description_placeholder">Descripción del comentario</string>
-    <string name="album_name_placeholder">Nombre del album</string>
-    <string name="album_description_placeholder">Descripcion del album</string>
+    <string name="album_name_placeholder">Nombre del álbum</string>
+    <string name="album_description_placeholder">Descripción del álbum</string>
     <string name="txt_no_comments">No hay comentarios para este álbum</string>
-    <string name="title_albums">Albums</string>
+    <string name="title_albums">Álbumes</string>
     <string name="title_collectors">Coleccionistas</string>
     <string name="title_comments">Comentarios del álbum</string>
     <string name="album_release_date">Fecha</string>
