chore(strings): added title home

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="album_name_placeholder">Nombre del álbum</string>
     <string name="album_description_placeholder">Descripción del álbum</string>
     <string name="txt_no_comments">No hay comentarios para este álbum</string>
+    <string name="title_home">Incio</string>
     <string name="title_albums">Álbumes</string>
     <string name="title_collectors">Coleccionistas</string>
     <string name="title_comments">Comentarios del álbum</string>
