--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="album_release_date">Fecha</string>
     <string name="album_genre">Género</string>
     <string name="album_record_label">Discografía</string>
+    <string name="artist_birthday">Cumpleaños</string>
 </resources>
