--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="album_release_date">Fecha</string>
     <string name="album_genre">Género</string>
     <string name="album_record_label">Discografía</string>
+    <string name="track_duration">Duración</string>
     <string name="artist_birthday">Cumpleaños</string>
     <string name="cover_album">Cover album</string>
     <string name="artist_image">Artist image</string>
