--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,17 +18,20 @@
     <string name="txt_no_comments">No hay comentarios para este álbum</string>
     <string name="title_home">Incio</string>
     <string name="title_albums">Álbumes</string>
+    <string name="title_tracks">Canciones</string>
     <string name="title_artists">Artistas</string>
     <string name="title_collectors">Coleccionistas</string>
     <string name="title_comments">Comentarios del álbum</string>
     <string name="album_release_date">Fecha</string>
     <string name="album_genre">Género</string>
     <string name="album_record_label">Discografía</string>
+    <string name="track_duration">Duración</string>
     <string name="artist_birthday">Cumpleaños</string>
     <string name="cover_album">Cover album</string>
     <string name="artist_image">Artist image</string>
     <string name="home_page">Página de inicio</string>
-    <string name="collector_image">Collector image</string>
+    <string name="collector_image">Imagen coleccionista</string>
+    <string name="track_image">Imagen canción</string>
     <string name="title_inicio">Inicio</string>
     <string name="title_album_create">Nuevo Álbum</string>
     <string name="album_name">Nombre</string>
