--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,11 @@
     <string name="genre">Género</string>
     <string name="album_create_record_label">Discografía</string>
     <string name="album_create_button">Crear álbum</string>
+    <string name="label_email">Correo eléctronico</string>
+    <string name="label_phone">Teléfono</string>
+    <string name="associate_track">Asociar track</string>
+    <string name="collector_image_in_associate">Collector Image in Associate</string>
+    <string name="label_duration">Duración</string>
+    <string name="btn_associate_track">Asociar Track</string>
+    <string name="collector_image_in_associate">Collector Image in Associate</string>
 </resources>
